# skills-vault

./: .gitignore  README.md  cli.js  get.ps1  get.sh  package-lock.json  package.json  registry.json
docs/: AGENT_INGEST_PROMPT.md
packs/AgricIDaniel__claude-seo/: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  install.ps1  install.sh  pack.meta.json  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh
packs/AgricIDaniel__claude-seo/skills/claude-seo/: SKILL.md
packs/addyosmani__agent-skills/: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pack.meta.json  plugin.json
packs/affaan-m__ecc/: pack.meta.json
packs/colbymchenry__codegraph/: .gitignore  BUNDLING.md  CHANGELOG.md  CLAUDE.md  README.md  TELEMETRY.md  install.ps1  install.sh  pack.meta.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
packs/garrytan__gstack/: package.json
packs/hesamsheikh__octogent/: .gitignore  CONTRIBUTING.md  pack.meta.json
packs/mksglu__context-mode/: CONTRIBUTING.md  README.md  openclaw.plugin.json  pack.meta.json  package.json  start.mjs  stats.json
packs/mukul975__Anthropic-Cybersecurity-Skills/: .gitignore  ATTACK_COVERAGE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.json  pack.meta.json
packs/obra__Superpowers/: README.md  package.json  (+3 more)
scripts/: build-dist.sh  build_registry.py  convert.py  export_all.sh  generate_readme.py  ingest.sh  ingest_compat.sh  ingest_external.py  install.sh
(+3727 files in other folders)
